# kognys-agents-python

./: .env.example  .gitignore  Procfile  README.md  SSE_MIGRATION_GUIDE.md  api_main.py  duplicate_analysis_1753050639.json  duplicate_analysis_1753050849.json  env-example  main.py  pyproject.toml  railway.json  requirements.txt  run_live.py  seed_database.py
data/: research_data.json
docs/: AIP_INTEGRATION.md  MEMBASE_CONSUMPTION.md
kognys/: config.py
kognys/agents/: challenger.py  checklist.py  input_validator.py  orchestrator.py  publisher.py  retriever.py  (+4 more)
tests/: README.md  STREAMING_API.md  curl_test_streaming.sh  robust_websocket_test.py  simple_streaming_test.py  simple_websocket_test.py  simulate_frontend_flow.py  streaming_client_example.py  streaming_test.html  test_address_normalization.py  test_aip_integration.py  test_api.py  test_api_flow.py  test_blockchain_only.py  test_dual_streams.py  test_duplicate_detection.py  test_frontend_streaming.html  test_full_workflow.py  test_live_direct.py  test_live_streaming.py  test_local_api_debug.py  test_logs_and_agent_names.py  test_membase_payload_simple.py  test_membase_payload_structure.py  test_phase1.py  test_phase2.py  test_production_streaming.py  test_quick_blockchain.py  test_quick_research_with_transactions.py  test_real_time_streaming.py  test_reformulation.py  test_simple_events.py  test_standalone_executor.py  test_streaming.py  test_streaming_duplicates.py  test_streaming_simple.py  test_streaming_with_paper_id.py  test_successful_research.py  test_token_streaming.py  test_transaction_manual.py  (+6 more)
(+19 files in other folders)
